recursion.cons.lessons.recursion.cons.Nfirst.scala.error
nfirst:4: error: type mismatch;
 found   : List[Any]
 required: List[Int]
  } else return l.head::nfirst(l.tail, n-1)::Nil
                      ^