recursion.cons.lessons.recursion.cons.Nfirst.scala.code
def nfirst(l:List[Int], n:Int): List[Int] = {
  if (n==1) {
    return l.head::Nil
  } else return l.head::nfirst(l.tail, n-1)::Nil
}